--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -1,12 +1,11 @@
-.body {
-  background-color: #005daa;
-}
 .cardBody {
+  background-color: #005daa !important;
   padding: 0 2.143em 1.25em 2.143em;
 }
 .inputContainer input,
 input {
   background-color: #213b73 !important;
+  color: white !important;
   padding-top: 30px !important;
   position: absolute !important;
   z-index: 1 !important;
