--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -1,6 +1,6 @@
 .cardBody {
   background-color: #005daa !important;
-  padding: 0 2.143em 1.25em 2.143em !important;
+  padding: 0 2.143em 1.25em 1.25em !important;
 }
 .cardLogo {
   margin-right: 0.5em;
@@ -140,4 +140,28 @@ input:-webkit-autofill {
 }
 .cvcInfoLink {
   display: none;
+}
+.rc-anchor-normal .rc-anchor-pt {
+  margin: 0 !important;
+  padding-right: 0 !important;
+  position: unset;
+  text-align: center;
+  width: auto;
+}
+.rc-anchor-logo-portrait {
+  margin: 10px 10px 0 10px;
+  height: 50px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.rc-anchor-normal-footer {
+  display: inline-block;
+  height: unset;
+  vertical-align: top;
+  width: 70px;
+}
+.rc-anchor-normal .rc-anchor-content {
+  height: 70px;
+  width: auto;
 }
