--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -1,9 +1,7 @@
-@media screen and (max-width: 767px) {
-  input,
-  select,
-  textarea {
-    font-size: 16px !important;
-  }
+input[type="text"],
+input[type="number"],
+input {
+  font-size: 16px !important;
 }
 .paymentBodyWrapper {
   background-color: #005daa !important;
