Update to input label on error

--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -51,7 +51,6 @@ input:focus {
   border-bottom: #f55564 solid 2px !important;
   left: -1px !important;
   padding-bottom: 7px !important;
-  z-index: 100 !important;
 }
 input:-webkit-autofill {
   box-shadow: 0 0 0px 1000px #213b73 inset !important;
@@ -146,6 +145,9 @@ input:-webkit-autofill {
   left: -12px !important;
   z-index: 1 !important;
 }
+.inputContainer.error label {
+  color: #f55564 !important;
+}
 .commandButton {
   visibility: hidden;
   position: relative;
@@ -162,6 +164,7 @@ input:-webkit-autofill {
   color: #8c4c9e !important;
   background-color: white !important;
   content: "Submit and Pay" !important;
+  margin-bottom: 20px;
 }
 .cvcInfoLink {
   display: none;
