Update to security card logos

--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -10,9 +10,12 @@ input[type="number"],
 input {
   font-size: 16px !important;
 }
+.content {
+  background-color: #005daa !important;
+}
 .paymentBodyWrapper {
   background-color: #005daa !important;
-  margin-bottom: -8em !important;
+  /* margin-bottom: -8em !important; */
 }
 .cardBody {
   background-color: #005daa !important;
@@ -20,6 +23,9 @@ input {
 }
 .cardLogo {
   margin-right: 0.5em;
+}
+.securityLogoHolder {
+  display: none !important;
 }
 img.cardLogo {
   vertical-align: middle;
@@ -151,10 +157,11 @@ input:-webkit-autofill {
 .commandButton {
   visibility: hidden;
   position: relative;
+  height: 3em !important;
 }
 .commandButton:after {
   visibility: visible !important;
-  position: absolute !important;
+  position: sticky !important;
   top: 20px;
   left: 0;
   font-weight: 700 !important;
@@ -164,7 +171,6 @@ input:-webkit-autofill {
   color: #8c4c9e !important;
   background-color: white !important;
   content: "Submit and Pay" !important;
-  margin-bottom: 20px;
 }
 .cvcInfoLink {
   display: none;
@@ -174,6 +180,6 @@ input:-webkit-autofill {
   padding-top: unset !important;
 }
 @font-face {
-  font-family: "Poppins-Regular";
-  src: url("file:///android_asset/fonts/");
+  font-family: "Poppins-Regular" !important;
+  src: url("file:///android_asset/fonts/") !important;
 }
