--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -5,6 +5,9 @@
     font-size: 16px !important;
   }
 }
+html {
+  background-color: #005daa !important;
+}
 input[type="text"],
 input[type="number"],
 input {
@@ -76,8 +79,11 @@ input:-webkit-autofill {
 }
 .right {
   padding-top: 10px;
-  position: sticky;
-  top: 0;
+  padding-bottom: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
 }
 .inputContainer {
@@ -171,7 +177,7 @@ input:-webkit-autofill {
   padding: 0px;
   font-weight: 700 !important;
   height: 55px;
-  /*   width: 97.5% !important; */
+  width: 97.5% !important;
   font-size: 17px;
   padding: 5px !important;
   color: #8c4c9e !important;
