--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -80,6 +80,7 @@ input:-webkit-autofill {
 .right {
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-left: 10px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -163,21 +164,18 @@ input:-webkit-autofill {
   color: #f55564 !important;
 }
 .commandButton {
-  visibility: hidden;
-  position: relative;
+  visibility: hidden !important;
   height: 80px !important;
-  width: 95% !important;
   line-height: 55px !important;
 }
 .commandButton:after {
   visibility: visible !important;
   position: absolute !important;
-  left: 0;
-  right: 0;
+  left: 10px;
+  right: 10px;
   padding: 0px;
   font-weight: 700 !important;
   height: 55px;
-  width: 97.5% !important;
   font-size: 17px;
   padding: 5px !important;
   color: #8c4c9e !important;
