--- a/IBM/ibmPaymentIframe.css
+++ b/IBM/ibmPaymentIframe.css
@@ -80,8 +80,12 @@ input:-webkit-autofill {
 .right {
   padding-top: 10px;
   padding-bottom: 10px;
-  position: sticky;
-  top: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  background-color: #005daa;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
 }
 .inputContainer {
@@ -185,6 +189,7 @@ input:-webkit-autofill {
 .cardBody .recaptchaContainer,
 .twoCardContainer .recaptchaContainer {
   padding-top: unset !important;
+  margin-bottom: 100px;
 }
 @font-face {
   font-family: "Poppins-Regular" !important;
