--- a/IBM/ibmPaymentIframe2.css
+++ b/IBM/ibmPaymentIframe2.css
@@ -195,3 +195,6 @@ input:-webkit-autofill {
   font-family: "Poppins-Regular" !important;
   src: url("file:///android_asset/fonts/Poppins-Regular.otf") !important;
 }
+body {
+  font-family: "Poppins-Regular";
+}
