--- a/IBM/ibmPaymentIframe2.css
+++ b/IBM/ibmPaymentIframe2.css
@@ -86,6 +86,7 @@ input:-webkit-autofill {
   bottom: 0;
   z-index: 100;
   background-color: #005daa;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
 }
 .inputContainer {
