--- a/IBM/ibmPaymentIframe2.css
+++ b/IBM/ibmPaymentIframe2.css
@@ -88,6 +88,7 @@ input:-webkit-autofill {
   background-color: #005daa;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
+  -webkit-appearance: none;
 }
 .inputContainer {
   background-color: transparent !important;
@@ -194,5 +195,5 @@ input:-webkit-autofill {
 }
 @font-face {
   font-family: "Poppins-Regular";
-  src: url("file:///android_asset/fonts/Poppins-Regular.otf") format(opentype);
+  src: url("file:///android_asset/fonts/");
 }
