--- a/IBM/ibmPaymentIframe3.css
+++ b/IBM/ibmPaymentIframe3.css
@@ -80,11 +80,9 @@ input:-webkit-autofill {
 .right {
   padding-top: 10px;
   padding-bottom: 10px;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 100;
+  position: relative;
+  width: 100%;
+  z-index: 1000;
   background-color: #005daa;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5) !important;
